Revision history for Perl extension Alien::wxWidgets.

0.60  TBR
    - allow building 2.9.4

0.59  Tue May 01 2012
    - Version sub modules to keep meta info users happy

0.58  Thu Apr 12 2012
    - WXWIN / WXDIR MSWin32 fix.

0.57  Tue Mar 27 2012
    - fix for osx-cocoa overlay drawing in 2.9.x
    - Return --with-osx_cocoa . --with-mac on better basis.
    - several fixes for default macosx builds

0.56  Fri Mar 16 2012
    - add propgrid ribbon webview library names

0.55  Tue Feb 28 2012
    - Correctly interpret boolean option = 1 as 'yes' 
      ( Thanks to Robert Olsen )  
    - Fix for msw builds where Perl defines -D_USE_32BIT_TIME_T 
      ( Thanks to Bjoern Hoehrmann )
    - Fix for Xcode 4.3 on OSX Lion
    - Allow build 2.9.3 wxWidgets (default for 64 bit Mac)

0.54  Wed Nov 09 08:00:00 BST 2011
    - Remove force of static binding for mingw libgcc & libstdc++
    - For mingw, properly detect the gcc shared lib dependencies
      to install
0.53  Thu Oct 13 08:00:00 BST 2011 
    - SDK fix for 2.8.x on Mac OSX Lion
    - 2.9.2 default for 64bit MacOSX
    - 2.9.2 build changes for msw supporting mingw/gcc >= 4.5.2
    - 2003 Platform SDK build fixed for 2.8.12

0.52  Thu May 05 08:00:00 BST 2011
    - release 0.51_01 as 0.52

0.51_01 Thu Apr 21 22:28:51 BST 2011
    - 64 bit mingw printing fix
    - 2.9.1 default for 64bit MacOSX
    - 2.8.12 general default

0.51  Tue Mar 30 22:28:51 CEST 2010
    - Build fix for Perl 5.12.

0.50_02  Sun Mar 21 10:33:00 CET 2010
    - Fixed 64 bit compilation when using the MinGW-w64 compiler.

0.50_01  Fri Feb 26 17:08:21 CET 2010
    - Added wxWidgets-extraflags build option.
    - Exit with an error message under Cygwin.
    - Use the system version of Archive::Extract and File::Fetch
      if newer than the bundled version.

0.50  Sun Jan 10 16:16:44 CET 2010
    - When compiling on Windows with MSVC 9, make the generated
      wxWidgets DLL load correctly by adding a manifest to them